@@ -1,0 +1,289 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html><head>
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Another possibility for a hierarchy</title>
+
+<style type="text/css">
+ol {
+  list-style-type: upper-alpha;
+  list-style-position: outside;
+  background-color: #ccffe5;
+}
+ol ol {
+  list-style-type: upper-roman;
+  background-color: #ccfffa;
+}
+ol ol ol {
+  list-style-type: decimal;
+  background-color: #cce9ff;
+}
+ol ol ol ol {
+  list-style-type: lower-roman;
+  background-color: #ccd4ff;
+}
+ol ol ol ol ol {
+  list-style-type: lower-alpha;
+  background-color: #d8ccff;
+}
+
+</style>
+</head>
+<body>
+<br>
+<ol>
+<li>Control<br>
+<ol>
+<li>Concurrency<br>
+<ol>
+<li>Threads<br>
+<ol>
+<li>Condition</li>
+<li>Event</li>
+<li>Mutex</li>
+<li>Thread</li>
+</ol>
+</li>
+<li>Exceptions</li>
+<li>Labels</li>
+<li>Monad</li>
+</ol>
+</li>
+<li>Codec<br>
+<ol>
+<li>Gzip</li>
+<li>Bz2</li>
+<li>Transcode</li>
+</ol>
+</li>
+<li>Data<br>
+<ol>
+<li>Mutable<br>
+<ol>
+<li>Array<br>
+<ol>
+<li>Cap</li>
+<li>Labels</li>
+</ol>
+</li>
+<li>Bigarray<br>
+<ol>
+<li>Array1</li>
+<li>Array2</li>
+<li>Array3</li>
+<li>Genarray</li>
+</ol>
+</li>
+<li>Dllist</li>
+<li>Dynarray</li>
+<li>Enum<br>
+<ol>
+<li>ExceptionLess</li>
+</ol>
+</li>
+<li>Global</li>
+<li>Hashtbl<br>
+<ol>
+<li>Make</li>
+<li>Labels</li>
+<li>MakeLabels</li>
+</ol>
+</li>
+<li>RefList<br>
+<ol>
+<li>Index</li>
+</ol>
+</li>
+<li>Queue</li>
+<li>Ref</li>
+<li>RefList</li>
+<li>Stack</li>
+<li>Stream</li>
+</ol>
+</li>
+<li>Logical<br>
+<ol>
+<li>Bool</li>
+<li>BitSet</li>
+<li>Unit</li>
+</ol>
+</li>
+<li>Numeric<br>
+<ol>
+<li>Interfaces (formerly Common)</li>
+<li>Big_int</li>
+<li>Common</li>
+<li>Complex</li>
+<li>Float</li>
+<li>Int</li>
+<li>Int32</li>
+<li>Int64</li>
+<li>Native_int</li>
+<li>Num</li>
+<li>Safe_int</li>
+</ol>
+</li>
+<li>Persistent<br>
+<ol>
+<li>Lazy</li>
+<li>List<br>
+<ol>
+<li>ExceptionLess</li>
+<li>Labels</li>
+</ol>
+</li>
+<li>Map<br>
+<ol>
+<li>Make</li>
+<li>MakeLabels</li>
+</ol>
+</li>
+<li>Option<br>
+<ol>
+<li>Labels</li>
+</ol>
+</li>
+<li>PMap</li>
+<li>PSet</li>
+<li>Set<br>
+<ol>
+<li>Make</li>
+<li>MakeLabels</li>
+</ol>
+</li>
+</ol>
+</li>
+<li>Text
+<ol>
+<li>Buffer</li>
+<li>Char</li>
+<li>UTF8</li>
+<li>Rope</li>
+<li>UChar</li>
+<li>String<br>
+<ol>
+<li>Labels</li>
+</ol>
+</li>
+</ol>
+</li>
+</ol>
+</li>
+<li>Distro<br>
+<ol>
+<li>Packages (formerly Findlib)</li>
+<li>Tools (formerly Execute)</li>
+</ol>
+</li>
+<li>Internals<br>
+<ol>
+<li>Callback</li>
+<li>Gc</li>
+<li>Mod (formerly CamlinternalMod)</li>
+<li>Obj</li>
+<li>Oo<br>
+<ol>
+<li>Private (formerly CamlinternalOo)</li>
+</ol>
+</li>
+<li>Weak<br>
+<ol>
+<li>Make</li>
+</ol>
+</li>
+</ol>
+</li>
+<li>Network (placeholder)</li>
+<li>Text (formerly Languages)<br>
+<ol>
+<li>Lex<br>
+<ol>
+<li>Genlex<br>
+<ol>
+<li>Languages<br>
+<ol>
+<li>C</li>
+<li>OCaml</li>
+</ol>
+</li>
+</ol>
+</li>
+<li>Lexing</li>
+</ol>
+<ol>
+</ol>
+</li>
+<li>Parse<br>
+<ol>
+<li>CharParser</li>
+<li>UCharParser</li>
+<li>ParserCo<br>
+<ol>
+<li>Source</li>
+</ol>
+</li>
+<li>Parsing</li>
+</ol>
+</li>
+<li>Pretty<br>
+<ol>
+<li>Format</li>
+</ol>
+</li>
+<li>Printf</li>
+<li>Regexp</li>
+<ol>
+<li>Str</li>
+<li>PCRE (in the future)</li>
+</ol>
+<li>Scanf</li>
+<ol>
+<li>Scanning</li>
+</ol>
+<li>SExpr</li>
+<li>XML (placeholder)</li>
+</ol>
+<ol>
+</ol>
+</li>
+<li>Standard</li>
+<li>Sys<br>
+<ol>
+<li>Arg</li>
+<li>File</li>
+<li>IO<br>
+<ol>
+<li>BigEndian</li>
+</ol>
+</li>
+<li>OptParse<br>
+<ol>
+<li>Opt</li>
+<li>OptParser</li>
+<li>StdOpt</li>
+</ol>
+</li>
+<li>Path (formerly Filename)</li>
+<li>Shell (formerly Sys)</li>
+<li>Unix<br>
+<ol>
+<li>Labels</li>
+</ol>
+</li>
+<li>Unzip</li>
+</ol>
+</li>
+<li>Util<br>
+<ol>
+<li>Digest</li>
+<li>Random<br>
+<ol>
+<li>State</li>
+</ol>
+</li>
+</ol>
+</li>
+<li>Legacy</li>
+</ol>
+</li>
+</ol>
+<br>
+</body></html>
